<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/judulhal2"
            android:textAlignment="center"
            android:textColor="@color/judul"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/kotak"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/persegi"
                    android:text="@string/psg" />

                <Button
                    android:id="@+id/bulet"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:shadowRadius="10"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/lingkaran"
                    android:text="@string/lkr" />
            </TableRow>
        </TableLayout>

<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/panjang"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/panjang"
                android:text="@string/psg" />

            <Button
                android:id="@+id/tiga"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:shadowRadius="10"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/segitiga"
                android:text="@string/lkr" />
        </TableRow>
    </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/trapesm"
                    android:layout_width="180dp"
                    android:layout_height="110dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/trapezoidal"
                    android:text="@string/psg" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <Button
                    android:id="@+id/sdown"
                    android:layout_width="180dp"
                    android:layout_height="110dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/shutdown"/>

            </TableRow>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>